01-deploy-core-system/01-deploy-ldap-manager/conf/01-deploy-lam.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ldap-account-manager
  namespace: core-system
  labels:
    app: ldap-account-manager
    type: ldap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ldap-account-manager
  template:
    metadata:
      labels:
        app: ldap-account-manager
        type: ldap
    spec:
      containers:
        - name: ldap-account-manager
          image: ldapaccountmanager/lam:8.0.1
          ports:
            - containerPort: 80
