01-deploy-core-system/01-deploy-ldap-manager/conf/02-create-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lam
    type: ldap
  name: lam
  namespace: core-system
spec:
  ports:
    - port: 80
  selector:
    app: ldap-account-manager
